fix for scrolling on mobile

--- a/coding-for-designers/darkmode.css
+++ b/coding-for-designers/darkmode.css
@@ -16,12 +16,9 @@ input {
 #dark-mode:checked~.background {
   content: "";
   background-color: black;
-  position: absolute;
+  position: fixed;
+  /* Must be fixed to account for overflow scrolling */
   z-index: -999;
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
   left: 0;
   top: 0;
   right: 0;
@@ -31,12 +28,8 @@ input {
 #blue:checked~.background {
   content: "";
   background-color: blue;
-  position: absolute;
+  position: fixed;
   z-index: -999;
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
   left: 0;
   top: 0;
   right: 0;
